[package]
name = "rblcheck"
version = "0.1.0"
authors = ["Andrew Aylett <andrew@aylett.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0"
clap = "~2.33"
dbus = "0.9.1"
dbus-tree = "0.9.0"
libc = "0.2.86"

[build-dependencies]
dbus-codegen = "0.9.1"
