[package]
name = "dabl"
description = "Checks DNS allow- and deny-lists"
homepage = "https://github.com/andrewaylett/dabl"
readme = "README.md"

repository = "https://github.com/andrewaylett/dabl"
license = "Apache-2.0"

version = "0.5.1"
authors = ["Andrew Aylett <andrew@aylett.co.uk>"]
edition = "2018"
default-run = "dabl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.21"
stderrlog = "0.5.4"
libdnscheck = { path = "../libdnscheck", version = "0.5.1" }

[dependencies.structopt]
version = "0.3"
features = ["wrap_help"]

[features]
resolved = ["libdnscheck/resolved"]
