[package]
name = "generate-dbus-resolve1"
description = "Resolves DNS using DBus"
homepage = "https://github.com/andrewaylett/dabl"
readme = "README.md"

repository = "https://github.com/andrewaylett/dabl"
license = "Apache-2.0"

version = "0.3.0"
authors = ["Andrew Aylett <andrew@aylett.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.6"
dbus-tree = "0.9.0"

[target.'cfg(target_os = "linux")'.build-dependencies]
dbus-codegen = "0.9.1"
