[package]
name = "generate-dbus-resolve1"
description = "Resolves DNS using DBus"
homepage = "https://github.com/andrewaylett/dabl"
readme = "README.md"

repository = "https://github.com/andrewaylett/dabl"
license = "Apache-2.0"

version = "1.1.0"
authors = ["Andrew Aylett <andrew@aylett.co.uk>"]
edition = "2021"

rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.7"
dbus-tree = "0.9.2"

[build-dependencies]
dbus-codegen = { version = "0.12.0", default-features = false }
