[package]
name = "libdnscheck"
description = "Checks DNS allow- and deny-lists"
homepage = "https://github.com/andrewaylett/dabl"
readme = "README.md"

repository = "https://github.com/andrewaylett/dabl"
license = "Apache-2.0"

version = "0.5.1"
authors = ["Andrew Aylett <andrew@aylett.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
resolved = ["dbus", "dbus-tree", "generate-dbus-resolve1"]

[dependencies]
anyhow = "~1.0.69"
thiserror = "~1.0"
libc = "0.2.140"
log = "0.4.17"
dns-lookup = "1.0.8"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9.7", optional = true }
dbus-tree = { version = "0.9.2", optional = true }
generate-dbus-resolve1 = { path = "../generate-dbus-resolve1", version = "1.1.0", optional = true }
