[package]
name = "libdnscheck"
description = "Checks DNS allow- and deny-lists"
homepage = "https://github.com/andrewaylett/dabl"
readme = "README.md"

repository = "https://github.com/andrewaylett/dabl"
license = "Apache-2.0"

version = "0.5.1"
authors = ["Andrew Aylett <andrew@aylett.co.uk>"]
edition = "2021"

rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0.72"
thiserror = "~1.0.44"
libc = "0.2.147"
log = "0.4.19"
dns-lookup = "2.0.2"
