[package]
name = "rblcheck"
description = "Checks DNS RBLs"
authors = ["Andrew Aylett <andrew@aylett.co.uk>"]
homepage = "https://github.com/andrewaylett/rblcheck"
readme = "README.md"

version = "0.2.0"
repository = "https://github.com/andrewaylett/rblcheck"
license = "Apache-2.0"

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0"
clap = "~2.33"

libdnscheck = { path = "../libdnscheck", version = "0.2.0" }
