[package]
name = "rblcheck"
description = "Checks DNS RBLs"
authors = ["Andrew Aylett <andrew@aylett.co.uk>"]
homepage = "https://github.com/andrewaylett/dabl"
readme = "README.md"

version = "0.5.1"
repository = "https://github.com/andrewaylett/dabl"
license = "Apache-2.0"

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0.70"
lazy_static = "1.4.0"
log = "0.4.17"
stderrlog = "0.5.4"

[dependencies.libdnscheck]
path = "../libdnscheck"
version = "0.5.1"

[dependencies.structopt]
version = "~0.3.26"
features = ["wrap_help"]
